Ready for 0.3 release

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+0.3 (2011-01-13)
+----------------
+
+* Resources are now registered and declared thanks to ``fanstatic``.
+
+
 0.2 (2010-07-27)
 ----------------
 
